--- a/platforms/browser/www/homepage.html
+++ b/platforms/browser/www/homepage.html
@@ -118,18 +118,30 @@
 			$('body').toggleClass('sidebar-collapse');
 		});
 		$('#btn-backward').click(function(){
-				Routing.backward();
-		});
+			Routing.backward();
+	<script type="text/javascript">
 		loading_icon = $('#loading_icon');
 		iziToast.settings({
 			position:'topRight'//Where it will be shown. It can be bottomRight, bottomLeft, topRight, topLeft, topCenter, bottomCenter or center.
-		});
+		})
 		$.extend( $.fn.datepicker.defaults, {disableTouchKeyboard:true});
-		$('#btn-menu, .sidebar-menu-off').click(function(){
-			$('body').toggleClass('sidebar-collapse');
-		});
-		$('#btn-backward').click(function(){
-			Routing.backward();
+		$(document).ready(function(){
+			$('#btn-menu, .sidebar-menu-off').click(function(){
+				$('body').toggleClass('sidebar-collapse');
+			});
+			$('#btn-backward').click(function(){
+				Routing.backward();
+			});
+			Routing.init('content');
+			csrf_token = '';
+			$.fn.select2.defaults.set("width", "100%");
+			$('#btn-logout').click(function(){
+				localStorage.removeItem('access_token');
+				localStorage.removeItem('refresh_token');
+				localStorage.removeItem('token_type');
+				localStorage.removeItem('username');
+				window.location.href = 'index.html';
+			})
 		});
 		Routing.init('content');
 		csrf_token = '';
@@ -140,17 +152,7 @@
 			localStorage.removeItem('token_type');
 			localStorage.removeItem('username');
 			window.location.href = 'index.html';
-		});
-		Routing.init('content');
-		csrf_token = '';
-		$.fn.select2.defaults.set("width", "100%");
-		$('#btn-logout').click(function(){
-			localStorage.removeItem('access_token');
-			localStorage.removeItem('refresh_token');
-			localStorage.removeItem('token_type');
-			localStorage.removeItem('username');
-			window.location.href = 'index.html';
-		});
+		})
 	});
 	</script>
 	<script type="text/javascript">
@@ -202,29 +204,30 @@
 			* Determine whether the file loaded from PhoneGap or not
 			*/
 			function isPhoneGap() {
-				return (window.cordova || window.PhoneGap || window.phonegap)
-				&& /^file:\/{3}[^\/]/i.test(window.location.href)
-				&& /ios|iphone|ipod|ipad|android/i.test(navigator.userAgent);
-				return (window.cordova || window.PhoneGap || window.phonegap)
-				&& /^file:\/{3}[^\/]/i.test(window.location.href)
-				&& /ios|iphone|ipod|ipad|android/i.test(navigator.userAgent);
+			return (window.cordova || window.PhoneGap || window.phonegap)
+			&& /^file:\/{3}[^\/]/i.test(window.location.href)
+			&& /ios|iphone|ipod|ipad|android/i.test(navigator.userAgent);
+			return (window.cordova || window.PhoneGap || window.phonegap)
+			&& /^file:\/{3}[^\/]/i.test(window.location.href)
+			&& /ios|iphone|ipod|ipad|android/i.test(navigator.userAgent);
 			}
 			if ( isPhoneGap() ) {
 				cordova.plugins.diagnostic.isLocationAvailable(function(available){
 				console.log("Location is " + (available ? "available" : "not available"));
-					if (!available) {
-						var confirmation = confirm('GPS tidak aktif!\n'+
-							'Ingin masuk ke pengaturan GPS?');
-						if (confirmation) {
-							cordova.plugins.diagnostic.switchToLocationSettings();
-						}
+				if (!available) {
+					var confirmation = confirm('GPS tidak aktif!\n'+
+						'Ingin masuk ke pengaturan GPS?');
+					if (confirmation) {
+						cordova.plugins.diagnostic.switchToLocationSettings();
 					}
+				}
 				}, function(error){
-					console.error("The following error occurred: "+error);
-				});
+				console.error("The following error occurred: "+error);
+					});
 				console.log('Running on phonegap');
 				console.error("The following error occurred: "+error);
-				console.log('Running on phonegap');
+				}
+			console.log('Running on phonegap');
 			} else {
 				console.log("Not running on PhoneGap!");
 			}
