--- a/platforms/android/app/src/main/assets/www/homepage.html
+++ b/platforms/android/app/src/main/assets/www/homepage.html
@@ -107,19 +107,11 @@
 	<script type="text/javascript" src="config/config.js"></script>
 	<script type="text/javascript" src="config/routing.js"></script>
 	<script type="text/javascript" src="js/features/logout.js"></script>
-	<script type="text/javascript">
-	loading_icon = $('#loading_icon');
-	iziToast.settings({
-		position:'topRight'//Where it will be shown. It can be bottomRight, bottomLeft, topRight, topLeft, topCenter, bottomCenter or center.
-	})
-	$.extend( $.fn.datepicker.defaults, {disableTouchKeyboard:true});
+	<script type="text/javascript" src="js/notification/SmartNotification.min.js"></script>
+	<script type="text/javascript" src="js/pusher.min.js"></script>
+
+	<script type="text/javascript">	
 	$(document).ready(function(){
-		$('#btn-menu, .sidebar-menu-off').click(function(){
-			$('body').toggleClass('sidebar-collapse');
-		});
-		$('#btn-backward').click(function(){
-			Routing.backward();
-	<script type="text/javascript">
 		loading_icon = $('#loading_icon');
 		iziToast.settings({
 			position:'topRight'//Where it will be shown. It can be bottomRight, bottomLeft, topRight, topLeft, topCenter, bottomCenter or center.
@@ -420,6 +412,54 @@
 		clearInterval(interval);
 		$('#status').text('DIberhentikan . . . ');
 	}
+	</script>
+	<script type="text/javascript">
+		PUSHER_APP_ID="691515"
+		PUSHER_APP_KEY="dc427b22d37fc68da031"
+		PUSHER_APP_SECRET="a3c2fd863104e1f91b42"
+		PUSHER_APP_CLUSTER="mt1"
+		// Enable pusher logging - don't include this in production
+	    Pusher.logToConsole = true;
+
+	    var pusher = new Pusher(PUSHER_APP_KEY, {
+	      cluster: PUSHER_APP_CLUSTER,
+	      forceTLS: true
+	    });
+
+	    var channel = pusher.subscribe('my-channel');
+	    channel.bind('my-event', function(data) {
+	      
+	      navigator.notification.alert(data.message, alertCallback, ['Pusher Get'], ['Oke']);
+	      function alertCallback(){
+	      	console.log(data);
+	      }
+	    });
+
+
+		// Background Mode set enable
+		cordova.plugins.backgroundMode.enable();
+		cordova.plugins.backgroundMode.excludeFromTaskList();
+		cordova.plugins.backgroundMode.overrideBackButton();
+		setInterval(function(){
+			var is_background_mode = cordova.plugins.backgroundMode.isActive();
+
+			console.log(is_background_mode);
+		},  5000);
+
+		cordova.plugins.backgroundMode.setDefaults({
+		    title: 'Pusat Riyal',
+		    text: 'Menunggu info terbaru ..',
+		    icon: 'icon', // this will look for icon.png in platforms/android/res/drawable|mipmap
+		    color: '#007139', // hex format like 'F14F4D'
+		    resume: true,
+		    hidden: false,
+		    bigText: false
+		})
+
+		cordova.plugins.backgroundMode.on('activate', function() {
+		   cordova.plugins.backgroundMode.disableWebViewOptimizations(); 
+		});
+
 	</script>
 </body>
 </html>
